<resources>
    <string name="app_name">Rongbao</string>
    <string name="login">登陆</string>
    <string name="text_register">注册</string>
    <string name="edtext_username">请输入账号</string>
    <string name="text_psd">密码:</string>
    <string name="erroy">x</string>
    <string name="edtext_psd">请输入密码</string>
    <string name="text_username">账号:</string>
    <string name="register">注册账号</string>
    <string name="forget_psd">忘记密码?</string>
    <string name="other">其他登陆方式</string>
    <string name="text_aginpsd">确认密码</string>
    <string name="text_verifi">验证码"</string>
    <string name="text_getverifi">获取验证码</string>
    <string name="edtext_verifi">验证码</string>
    <string name="text_phone">手机号:</string>
    <string name="edtext_phone">输入手机号</string>
    <string name="news">新闻</string>
    <string name="short_video">短视频</string>
    <string name="setting">设置</string>
    <string name="night">夜间模式</string>
    <string name="backgroud">地图</string>
    <string name="ring_spack">环聊</string>
    <string name="my_name">环信</string>
    <string name="progess_name">%</string>
    <string name="edtext_Aginpsd">请确认密码</string>
    <string name="out">退出登录</string>
    <string name="map">地图</string>
    <string name="compass">指南针</string>
    <string name="linkman">联系人</string>
    <string name="search">搜索 :</string>
    <string name="context">输入要搜索的内容</string>
    <string name="location">| 定位</string>
    <string name="notice">注意:可搜索附近5000米的参照物</string>
    <string name="addpeople">添加联系人</string>
    <string name="phronecontact">联系人</string>
    <string name="EmergencyContactPerson">紧急联络人</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="send">发送</string>
    <string name="addfriends">输入好友账号</string>
    <string name="celear">清理</string>
    <string name="login_after">登陆之后接受到那些消息的提醒</string>
    <string name="text_size_select">字体大小</string>
    <string name="not_image">无图模式</string>
    <string name="clear_cache">清理垃圾</string>
    <string name="network_check">网络诊断</string>
    <string name="Recommend_your_friends">推荐给好友</string>
    <string name="Give_us_a_grade">给我评分吧</string>
    <string name="versionscode">版本1.1.1</string>
    <string name="my">\@我的</string>
    <string name="huifu_my">\@回复我的</string>
    <string name="push_message">发送消息</string>
    <string name="other_message">其他</string>
    <string name="send_voice">发送语音</string>
</resources>
