<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/h2"
    tools:context="com.rongbao.jyjy.rongbao.activity.RegisterActivity">
    <TextView
        android:textSize="36dp"
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:text="@string/text_register"/>
    <ImageView
        android:id="@+id/register_follow"
        android:layout_toLeftOf="@id/register_title"
        android:layout_alignTop="@id/register_title"
        android:layout_marginRight="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/follow"/>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/register_linear"
        android:layout_below="@id/register_follow"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/text_username"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/register_ed_username"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:hint="@string/edtext_username"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/register_erroy_username"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/erroy"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:id="@+id/register_psd"
        android:layout_below="@+id/register_linear"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/text_psd"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/register_ed_psd"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:password="true"
            android:layout_height="wrap_content"
            android:hint="@string/edtext_psd"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/register_erroy_psd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/erroy"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:id="@+id/register_agin_psd"
        android:layout_below="@+id/register_psd"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/text_aginpsd"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/register_agin_ed_psd"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:password="true"
            android:layout_height="wrap_content"
            android:hint="@string/edtext_Aginpsd"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/register_agin_erroy_psd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/erroy"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_marginLeft="20dp"
        android:id="@+id/register_phone"
        android:layout_below="@+id/register_agin_psd"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/text_phone"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/register_ed_phone"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:hint="@string/edtext_phone"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/register_agin_erroy_phone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/erroy"
            />
    </LinearLayout>






    <LinearLayout
        android:layout_marginLeft="20dp"
        android:id="@+id/register_verifi"
        android:layout_below="@+id/register_phone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/text_verifi"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/register_agin_ed_verifi"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/edtext_verifi"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/register_tv_verifi"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="6dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/select"
            android:layout_height="wrap_content"
            android:text="@string/text_getverifi"/>
        <TextView
            android:id="@+id/register_erroy_verifi"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/erroy"
            />
    </LinearLayout>
    <Button
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/register_bunregister"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_verifi"
        android:background="@drawable/color_selsct"
        android:text="@string/text_register"/>

</RelativeLayout>
