<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rongbao.jyjy.rongbao.activity.SecondActivity">
<android.support.v7.widget.Toolbar
    android:id="@+id/second_toolbar"
    android:background="@color/c_D9D3D3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<ImageView
    android:id="@+id/second_toolbar_imageback"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/icon_back"/>
    <TextView
        android:id="@+id/second_toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_gravity="center"
        android:textSize="16sp" />
</android.support.v7.widget.Toolbar>
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/second_smart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/second_recy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    <LinearLayout
        android:background="@color/c_D9D3D3"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/second_buttom_image"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/chatting_setmode_keyboard_btn_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
         />
        <ImageView
            android:id="@+id/second_buttom_image2"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/chatting_setmode_voice_btn_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />
        <EditText
            android:id="@+id/second_button_ed"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:background="@color/white"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/second_button_ed2"
            android:background="@color/white"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="点击录音"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/second_bun_send"
            android:layout_marginLeft="10dp"
            android:background="@drawable/select"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:padding="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"/>
        <TextView
            android:id="@+id/second_bun_send_voice"
            android:layout_marginLeft="10dp"
            android:background="@drawable/select"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:padding="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_voice"
            android:visibility="gone"/>

    </LinearLayout>
    </LinearLayout>
